app/routes/pages/components/PageDetail.css
@import 'app/styles/variables.css';

.cont {
  padding: 0;
}

.root {
  composes: container from 'app/styles/utilities.css';
}

.title {
  font-size: 28px;
  margin: 0;
}

.page {
  margin: 0;
  width: 100%;
}

.navTab {
  position: relative;
  margin-top: -2em;
}

.detail {
  flex: 1;
  min-width: 300px;
  width: 100%;
  max-width: 685px;
  margin: auto;
  padding-right: 10px;
}

.header {
  margin: 10px 0;
}

.headWrapper {
  display: flex;
  flex-flow: column wrap;
  margin-top: 35px;
}

.header1 {
  display: flex;
  justify-content: center;
  font-weight: bold;
  font-size: 2.5em;
  font-family: RalewayBold, sans-serif;
  margin-bottom: 15px;
  line-height: 1em;
}

.main {
  width: 100%;
}

.mainTxt {
  width: 100%;
  padding: 2.5em;
  padding-bottom: 4em;
}

.action {
  margin-left: 20px;
}

.coverImage {
  width: 100%;
  height: 300px;
  object-fit: scale-down;
}

.coverImage img {
  height: 300px;
  width: 100%;
  object-fit: scale-down;
}

.pictureHeader {
  margin-top: -15px;
  margin-bottom: 5px;
}

.banner {
  padding-bottom: 2px;
}

.banner img {
  height: 275px;
  width: 100%;
  object-fit: contain;
  margin-top: -2.1em;
}

.heading {
  text-align: center;
  color: #c0392b;
  margin: 50px 0 20px;
}

.leaderBoard {
  display: flex;
}

.leader {
  margin: auto;
  display: flex;
  align-items: flex-start;
  margin-right: 0;
}

.co_leader {
  margin: auto;
  display: flex;
  align-items: flex-start;
  margin-left: 0;
}

.members {
  display: flex;
  flex-wrap: wrap;
  text-align: center;
  justify-content: center;
  margin-left: -20px;
  margin-right: -20px;
}

.membersSection {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.sidebarOpenBtn {
  background-color: #f7f7f7;
  width: 40px;
  height: 65px;
  position: -webkit-sticky; /* Safari */
  position: sticky;
  top: 0;
  display: none;
  align-items: center;
  justify-content: center;
  border-radius: 0 50px 50px 0;
  border: 1px solid #d1d1d1;
  border-left: 0;
  color: var(--lego-red);
  z-index: 10;

  @media (--mobile-device) {
    display: flex;
  }
}

@media (--mobile-device) {
  .page {
    margin-top: -65px;
  }

  .mainTxt {
    padding: 1.5em;
    padding-bottom: 3em;
  }

  .header1 {
    font-size: 1.65em;
    text-align: center;
    word-break: break-word;
    margin-top: 0;
  }

  .banner img {
    height: 150px;
  }

  .navTab {
    display: flex;
    justify-content: left;
  }

  .leaderBoard {
    flex-direction: column;
    align-self: center;
  }
}

